Fix styling issues and improve code readability

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
-    font-size: large;
+    font-size: large;   
 }
 
 .dropdownButton {
@@ -34,12 +34,6 @@
     opacity: 1;
 }
 
-/* .rotate {
-    transform: rotate(180deg);
-    margin: 0;
-
-} */
-  
 .filters {
     display: flex;
     flex-direction: row;
@@ -166,8 +160,6 @@
 #greyFont {
     color: gray;
 }
-
-
 
 hr {
     border-color: lightgray; 
